--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,82 +1,99 @@
-  @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  html,
-  body,
-  :root {
-    height: 100%;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+html,
+body,
+:root {
+  height: 100%;
+}
 
+@layer base {
+  :root {
+    --background: 208 50% 98%;
+    --foreground: 208 5% 10%;
+    --card: 208 50% 98%;
+    --card-foreground: 208 5% 15%;
+    --popover: 208 50% 98%;
+    --popover-foreground: 208 95% 10%;
+    --primary: 208 100% 42.5%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 208 30% 90%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 170 30% 95%;
+    --muted-foreground: 208 5% 40%;
+    --accent: 170 30% 90%;
+    --accent-foreground: 208 5% 15%;
+    --destructive: 0 50% 50%;
+    --destructive-foreground: 208 5% 98%;
+    --border: 208 30% 82%;
+    --input: 208 30% 50%;
+    --ring: 208 100% 42.5%;
+    --radius: 0.5rem;
+  }
+  .dark {
+    --background: 208 50% 10%;
+    --foreground: 208 5% 98%;
+    --card: 208 50% 10%;
+    --card-foreground: 208 5% 98%;
+    --popover: 208 50% 5%;
+    --popover-foreground: 208 5% 98%;
+    --primary: 208 100% 42.5%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 208 30% 20%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 170 30% 25%;
+    --muted-foreground: 208 5% 65%;
+    --accent: 170 30% 25%;
+    --accent-foreground: 208 5% 95%;
+    --destructive: 0 50% 50%;
+    --destructive-foreground: 208 5% 98%;
+    --border: 208 30% 50%;
+    --input: 208 30% 50%;
+    --ring: 208 100% 42.5%;
+    --radius: 0.5rem;
+  }
 
   @layer base {
     :root {
-      --background: 0 0% 100%;
-      --foreground: 0 0% 3.9%;
-
-      --card: 0 0% 100%;
-      --card-foreground: 0 0% 3.9%;
-
-      --popover: 0 0% 100%;
-      --popover-foreground: 0 0% 3.9%;
-
-      --primary: 0 0% 9%;
-      --primary-foreground: 0 0% 98%;
-
-      --secondary: 0 0% 96.1%;
-      --secondary-foreground: 0 0% 9%;
-
-      --muted: 0 0% 96.1%;
-      --muted-foreground: 0 0% 45.1%;
-
-      --accent: 0 0% 96.1%;
-      --accent-foreground: 0 0% 9%;
-
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 0 0% 98%;
-
-      --border: 0 0% 89.8%;
-      --input: 0 0% 89.8%;
-      --ring: 0 0% 3.9%;
-
-      --radius: 0.5rem;
+      --danger: 0 72% 50%;
+      --danger-foreground: 208 5% 98%;
+      --warning: 39 100% 50%;
+      --warning-foreground: 208 5% 98%;
+      --success: 120 100% 40%;
+      --success-foreground: 208 5% 98%;
+      --info: 208 100% 50%;
+      --info-foreground: 208 5% 98%;
     }
-
     .dark {
-      --background: 0 0% 3.9%;
-      --foreground: 0 0% 98%;
-
-      --card: 0 0% 3.9%;
-      --card-foreground: 0 0% 98%;
-
-      --popover: 0 0% 3.9%;
-      --popover-foreground: 0 0% 98%;
-
-      --primary: 0 0% 98%;
-      --primary-foreground: 0 0% 9%;
-
-      --secondary: 0 0% 14.9%;
-      --secondary-foreground: 0 0% 98%;
-
-      --muted: 0 0% 14.9%;
-      --muted-foreground: 0 0% 63.9%;
-
-      --accent: 0 0% 14.9%;
-      --accent-foreground: 0 0% 98%;
-
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 0 0% 98%;
-
-      --border: 0 0% 14.9%;
-      --input: 0 0% 14.9%;
-      --ring: 0 0% 83.1%;
+      --danger: 0 72% 40%;
+      --danger-foreground: 208 5% 98%;
+      --warning: 30 100% 40%;
+      --warning-foreground: 208 5% 98%;
+      --success: 120 100% 35%;
+      --success-foreground: 208 5% 98%;
+      --info: 208 100% 45%;
+      --info-foreground: 208 5% 98%;
     }
   }
+}
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+@layer base {
+  * {
+    @apply border-border;
   }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+/* --danger: 0 100% 33%;
+      --danger-foreground: 0 100% 97%;
+
+      --warning: 0 100% 33%;
+      --warning-foreground: 0 100% 97%;
+
+      --success: 0 100% 33%;
+      --success-foreground: 0 100% 97%;
+
+      --info: 0 100% 33%;
+      --info-foreground: 0 100% 97%; */
